dependencies/charon/charon/tests/ui/monomorphization/dyn-trait.out
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ^^^^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> tests/ui/monomorphization/dyn-trait.rs:6:1
  |
6 | / fn dyn_to_string(x: &dyn Display) -> String {
7 | |     x.to_string()
8 | | }
  | |_^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> tests/ui/monomorphization/dyn-trait.rs:6:18
  |
6 | fn dyn_to_string(x: &dyn Display) -> String {
  |                  ^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt::<Str>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt::<alloc::string::String>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

note: the error occurred when translating `core::fmt::Display::fmt::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 598 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::{impl core::fmt::Display::<Str>}::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

note: the error occurred when translating `core::marker::MetaSized::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

note: the error occurred when translating `core::marker::MetaSized::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::{vtable}::<alloc::string::String>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1


thread 'rustc' panicked at src/bin/charon-driver/translate/translate_trait_objects.rs:375:14:
incorrect `dyn_self`
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `core::fmt::Display`.
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: Failed to translate item Type(3).
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `alloc::string::{impl core::fmt::Display::<alloc::string::String>}::{vtable}`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: Item `alloc::string::{impl#23}` caused errors; ignoring.
 --> /rustc/library/alloc/src/string.rs:2623:1

error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 671 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `alloc::string::{impl core::fmt::Display::<alloc::string::String>}::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

note: the error occurred when translating `alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

note: the error occurred when translating `alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

note: the error occurred when translating `alloc::string::{impl#4}::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

note: the error occurred when translating `alloc::string::{impl#5}::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

note: the error occurred when translating `alloc::string::{impl alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>}::to_string::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
ERROR Charon failed to translate this code (46 errors)
